[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/Mainscene.gd" type="Script" id=1]

[node name="Opretbruger" type="Node2D"]
script = ExtResource( 1 )

[node name="Button" type="Button" parent="."]
margin_left = 297.0
margin_top = 161.0
margin_right = 440.0
margin_bottom = 187.0
text = "Opret Bruger"

[node name="Button2" type="Button" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 9.0
margin_top = 84.0
margin_right = 152.0
margin_bottom = 110.0
text = "Select Data"

[node name="TextEdit" type="TextEdit" parent="."]
margin_left = 248.0
margin_top = 45.0
margin_right = 476.0
margin_bottom = 61.0
rect_pivot_offset = Vector2( 35, 103 )

[node name="TextEdit2" type="TextEdit" parent="."]
margin_left = 248.0
margin_top = 70.0
margin_right = 476.0
margin_bottom = 86.0

[node name="TextEdit3" type="TextEdit" parent="."]
margin_left = 248.0
margin_top = 95.0
margin_right = 476.0
margin_bottom = 111.0

[node name="TextEdit4" type="TextEdit" parent="."]
margin_left = 248.0
margin_top = 121.0
margin_right = 476.0
margin_bottom = 137.0

[node name="Label" type="Label" parent="."]
margin_left = 164.0
margin_top = 46.0
margin_right = 239.0
margin_bottom = 60.0
text = "Vælg id (tal)"

[node name="Label2" type="Label" parent="."]
margin_left = 143.0
margin_top = 70.0
margin_right = 242.0
margin_bottom = 84.0
text = "Vælg username"

[node name="Label3" type="Label" parent="."]
margin_left = 152.0
margin_top = 97.0
margin_right = 236.0
margin_bottom = 111.0
text = "indtast email"

[node name="Label4" type="Label" parent="."]
margin_left = 127.0
margin_top = 122.0
margin_right = 244.0
margin_bottom = 136.0
text = "Vælg adgangskode"

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 368, 93 )
current = true
zoom = Vector2( 0.7, 0.7 )

[connection signal="button_down" from="Button" to="." method="_on_Button_button_down"]
[connection signal="button_down" from="Button2" to="." method="_on_Button2_button_down"]
